# coil-solver

./: .gitignore  CMakeLists.txt  build.sh  clean.sh
src/: CMakeLists.txt  board.cpp  board.hpp  board_preprocessor.cpp  board_preprocessor.hpp  http_handler.cpp  http_handler.hpp  main.cpp  tile.cpp  tile.hpp
src/http/: http_handler.cpp
